--- a/config/i3/i3blocks.conf
+++ b/config/i3/i3blocks.conf
@@ -45,6 +45,7 @@ color=#cc241d //red
 
 #[separator]
 
+#IP address not showing up? Change 'enp0s3' to your network interface. Run ifconfig to see your interfaces.
 [ip_addr]
 label=
 command=ifconfig enp0s3 | grep inet | awk 'NR==1' | awk '{print $2;}'
